[package]
name = "steno"
version = "0.1.0"
authors = ["David Pacheco <dap@oxidecomputer.com>"]
edition = "2018"
license = "Apache-2.0"

[profile.dev]
#panic = "abort"

[dependencies]
anyhow = "1.0.34"
async-trait = "0.1.42"
futures = "0.3.8"
newtype_derive = "0.1.6"
petgraph = "0.6.0"
serde_json = "1.0"
thiserror = "1.0"

[dependencies.chrono]
version = "0.4"
features = [ "serde" ]

[dependencies.schemars]
version = "0.8.10"
features = [ "chrono", "uuid1" ]

[dependencies.serde]
version = "1.0"
features = [ "derive", "rc" ]

[dependencies.slog]
version = "2.7"
features = [ "max_level_trace", "release_max_level_debug" ]

[dependencies.tokio]
version = "1"
features = [ "full" ]

[dependencies.uuid]
version = "1.0.0"
features = [ "serde", "v4" ]

[dev-dependencies]
expectorate = "1.0"
slog-async = "2.6"
slog-term = "2.8"
structopt = "0.3"
subprocess = "0.2.6"
