[package]
name = "steno"
version = "0.3.2-dev"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/oxidecomputer/steno"
description = "distributed saga implementation"

[profile.dev]
#panic = "abort"

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.66"
futures = "0.3.27"
newtype_derive = "0.1.6"
serde_json = "1.0"
thiserror = "1.0"
lazy_static = "1.4.0"

[dependencies.petgraph]
version = "0.6.3"
features =  [ "serde-1" ]

[dependencies.chrono]
version = "0.4"
features = [ "serde" ]

[dependencies.schemars]
version = "0.8.12"
features = [ "chrono", "uuid1" ]

[dependencies.serde]
version = "1.0"
features = [ "derive", "rc" ]

[dependencies.slog]
version = "2.7"
features = [ "max_level_trace", "release_max_level_debug" ]

[dependencies.tokio]
version = "1"
features = [ "full" ]

[dependencies.uuid]
version = "1.3.0"
features = [ "serde", "v4" ]

[dev-dependencies]
expectorate = "1.0"
slog-async = "2.6"
slog-term = "2.8"
structopt = "0.3"
subprocess = "0.2.6"
proptest = "1.1.0"
